# cline-test

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: initial_migration.py
app/: main.py
app/api/: router.py
app/api/endpoints/: __init__.py  genres.py  movies.py  search.py  sync.py  tv_shows.py  users.py
app/core/: config.py  logging.py
app/db/: database.py
app/models/domain/: __init__.py  base.py  genre.py  movie.py  tv_show.py  user.py
app/models/schemas/: __init__.py  base.py  genre.py  movie.py  tv_show.py  user.py
app/services/: __init__.py  genre_service.py  movie_service.py  tmdb_service.py  tv_show_service.py  user_service.py
tests/: conftest.py  test_api.py
tests/services/: test_tmdb_service.py
